Signed-off-by: lipengbo <lipengbo@msn.com>

--- a/_config.yml
+++ b/_config.yml
@@ -223,3 +223,8 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jemoji
+
+collections:
+  arduino:
+    output:         true
+    permalink:      /:collection/:path
