--- a/_config.yml
+++ b/_config.yml
@@ -227,4 +227,4 @@ plugins:
 collections:
   arduino:
     output:         true
-    permalink:      /:collection/:path
+  #  permalink:      /:collection/:path
