--- a/_config.yml
+++ b/_config.yml
@@ -215,7 +215,8 @@ defaults:
       show_subscribe: true
       pageview: true
   - scope:
-      path: "/_staff_members/*"
+      path: ""
+      type: "staff_members"
     values:
       layout: article
 
@@ -236,5 +237,7 @@ collections:
     my_collection:
         output: true
     staff_members:
+        #relative_directory: '_staff_menmbers/'
+        permalink: _site/:path.html
         output: true
         people: true
